--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-Bootstrap-Flask==2.4.0
-Flask_Login==0.6.3
-Flask_WTF==1.2.1
-WTForms==3.1.2
-Werkzeug==3.1.4
-Flask==3.0.3
-flask_sqlalchemy==3.1.1
-SQLAlchemy==2.0.35
-python-dotenv==1.0.1
-email_validator==2.2.0
-psycopg2-binary==2.9.10
+Bootstrap-Flask==2.5.0
+Flask-Login==0.6.3
+Flask-WTF==1.2.2
+WTForms==3.2.1
+Werkzeug==3.1.5
+Flask==3.1.2
+flask-sqlalchemy==3.1.1
+SQLAlchemy==2.0.46
+python-dotenv==1.2.1
+email_validator==2.3.0
+psycopg2-binary==2.9.11
+Flask-Testing==0.8.1
