Clean up codebase, remove unused files, and update README
- Delete images/ directory (old screenshots)
- Delete run_test.py and api/tests.py
- Delete stale image assets (PNG originals, organizeit.webp)
- Add optimized WebP backgrounds (hero-bg, auth-bg)
- Add privacy and terms pages
- Remove 6 unused packages from requirements.txt
- Rewrite README to match redesigned architecture
- Update hero CSS to use calc-based viewport height
- Fix light mode overlay washing out hero background
- Revert main element to plain tag (no flex-grow)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
+blinker==1.9.0
 Bootstrap-Flask==2.5.0
-Flask-Login==0.6.3
-Flask-WTF==1.2.2
-WTForms==3.2.1
-Werkzeug==3.1.5
+click==8.3.1
+dnspython==2.8.0
+email-validator==2.3.0
 Flask==3.1.2
-flask-sqlalchemy==3.1.1
-SQLAlchemy==2.0.46
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+idna==3.11
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
 python-dotenv==1.2.1
-email_validator==2.3.0
-psycopg2-binary==2.9.11
-Flask-Testing==0.8.1
+SQLAlchemy==2.0.46
+typing_extensions==4.15.0
+Werkzeug==3.1.5
+WTForms==3.2.1
